syntax = "proto3";
package anytype.storage;
option go_package = "github.com/anytypeio/go-anytype-middleware/pkg/lib/pb/storage";

import "pb/model/protos/models.proto";
import "pb/storage/protos/file.proto";
import "google/protobuf/struct.proto";

message SmartBlockSnapshot {
    map<string, uint64> state = 1;
    repeated anytype.model.Block blocks = 2;
    google.protobuf.Struct details = 3;
    map<string, FileKeys> keysByHash = 4;
    int64 clientTime = 5;
}
